--- a/index.html
+++ b/index.html
@@ -1,12 +1,68 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-  <meta charset="UTF-8">
-  <title></title>
-</head>
-<body>
-<script>
-  window.location.href = 'dist/';
-</script>
+<!doctype html>
+<html class="no-js">
+    <head>
+        <meta charset="utf-8">
+        <meta name="apple-itunes-app" content="app-id=525536985">
+        <title>smart banner poc</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+
+        <link rel="stylesheet" href="styles/vendor.css"/>
+
+        <link rel="stylesheet" href="styles/main.css"/>
+
+    </head>
+    <body>
+        <!--[if lt IE 10]>
+            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+        <![endif]-->
+
+        <div class="container-fluid">
+          <section class="row">
+            <div class="col-md-12">
+              <h1>Smart Banner POC</h1>
+            </div>
+          </section>
+          <section class="row">
+            <div class="col-sm-12">
+              <section>
+                See the cookies below:
+                <pre id="cookies-container">
+                  ...
+                </pre>
+              </section>
+            </div>
+          </section>
+          <div class="row">
+            <div class="col-sm-10 col-xs-8">
+              <p class="text-right">
+                <span id="cookies-load-info" class="text-muted"></span>
+              </p>
+            </div>
+            <div class="col-sm-2 col-xs-4">
+              <p class="text-right">
+                <button class="btn btn-primary" id="load-cookies">Load Cookies</button>
+              </p>
+            </div>
+          </div>
+        </div>
+
+
+        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+        <script>
+            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+            e.src='//www.google-analytics.com/analytics.js';
+            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+            ga('create','UA-XXXXX-X');ga('send','pageview');
+        </script>
+
+        <script src="scripts/vendor.js"></script>
+
+        <script src="scripts/plugins.js"></script>
+
+        <script src="scripts/main.js"></script>
 </body>
 </html>
