Changes to Macys app id.

--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,11 @@
 <html class="no-js">
     <head>
         <meta charset="utf-8">
+        <!-- bloomingdales big brown app
         <meta name="apple-itunes-app" content="app-id=525536985">
+        -->
+        <!-- macys app -->
+        <meta name="apple-itunes-app" content="app-id=341036067">
         <title>smart banner poc</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
